# vicon_reader

./: CMakeLists.txt  package.xml
include/: vicon_reader.h
launch/: basic.launch
msg/: Estimate.msg  EulerAngles.msg
params/: basic_param.yaml  camera_to_body.yaml
src/: mocap_reader_node.cpp  vicon_reader.cpp
